--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/VideoML/stdlib.git"
+    "url": "git+https://github.com/AnthusAI/videoml-stdlib.git"
   },
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
